--- a/vanilla/ts/package.json
+++ b/vanilla/ts/package.json
@@ -1,4 +1,5 @@
 {
+    "name": "layouts-ts",
     "version": "6.17.0",
     "scripts": {
         "build": "./node_modules/.bin/tsc;./node_modules/.bin/rollup -c rollup.config.js"
